session3/configs/authors/authors-canary-dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authors
spec:
  host: authors
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
