session3/configs/authors/authors-canary-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
spec:
  hosts:
    - authors
  http:
    - route:
        - destination:
            host: authors
            subset: v1
          weight: 0
        - destination:
            host: authors
            subset: v2
          weight: 100
